# emergent

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  Cargo.toml  README.md  TODO.md  index.html  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
.claude/skills/desktop-utility-design/: SKILL.md
.claude/skills/rust/: SKILL.md  api-design.md  concurrency.md  error-handling.md  ownership.md  performance.md  project-setup.md
.claude/skills/svelte-5/: SKILL.md  anti-patterns.md  components.md  runes.md  state-management.md  testing.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
.overstory/: config.yaml
.seeds/: config.yaml
apps/desktop/: package.json  tsconfig.json  tsdown.config.ts
apps/desktop/scripts/: dev-electron.mjs  electron-launcher.mjs  smoke-test.mjs  start-electron.mjs
apps/desktop/src/: main.ts  preload.ts
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/__tests__/: ping-pong.test.ts
apps/server/src/: bun-sqlite.d.ts  main.ts
apps/web/: index.html  package.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
apps/web/__tests__/: routes.test.ts
apps/web/src/: env.ts  index.css  main.tsx
crates/emergent-core/: Cargo.toml
crates/emergent-core/src/: config.rs  detect.rs  lib.rs  mcp_handler.rs  runtime.rs  system_prompt.rs
crates/emergent-core/src/agent/: acp_bridge.rs  lifecycle.rs  mod.rs  prompt_loop.rs  queue.rs  registry.rs  spawner.rs  test_support.rs  thread_manager.rs  usage_store.rs
crates/emergent-core/src/mcp/: handler.rs  http_server.rs  mod.rs  token_registry.rs
crates/emergent-core/src/swarm/: mod.rs  system_prompt.rs  topology.rs
crates/emergent-core/src/task/: mod.rs  registry.rs  subscribe.rs
crates/emergent-core/src/workspace/: container.rs  mod.rs  paths.rs  state.rs  stats.rs  terminal.rs
crates/emergent-core/tests/: integration.rs  thread_rehydration.rs  usage_aggregator.rs
crates/emergent-daemon/: Cargo.toml
crates/emergent-daemon/src/: agent_manager.rs  config.rs  detect.rs  http_server.rs  lib.rs  mailbox.rs  main.rs  mcp.rs  server.rs  socket.rs  token_registry.rs  topology.rs
crates/emergent-daemon/tests/: integration.rs
crates/emergent-protocol/: Cargo.toml
crates/emergent-protocol/src/: client.rs  lib.rs  socket.rs  task.rs  transport.rs  types.rs
crates/mock-agent/: Cargo.toml
crates/mock-agent/src/: main.rs
docs/: README.md  SPEC.md  TECH_STACK.md
docs/architecture/: agent-lifecycle-and-acp.md  known-limitations.md  mcp-server-and-auth.md  notifications-and-protocol.md  persistence-and-usage.md  runtime-lifecycle.md  system-overview.md  task-and-swarm-coordination.md  workspaces-and-terminals.md
docs/development/: build-test-and-run.md
docs/frontend/: frontend-architecture.md
docs/reference/: ipc-and-events.md
docs/superpowers/plans/: 2026-03-11-tauri-migration.md  2026-03-19-multi-agent-type-picker.md  (+1 more)
e2e/: agent-page.spec.ts  app-startup.spec.ts  chat.spec.ts  daemon-connection.spec.ts  helpers.ts  layout.spec.ts  overview.spec.ts  phase-7-visual-qa.md  smoke.spec.ts  task-notifications.spec.ts  tasks.spec.ts  tauri-mock.ts
scripts/: build-desktop-artifact.ts  bundle-daemon.sh  dev-runner.ts  package.json  screenshot.ts  tsconfig.json
src/: App.svelte  App.tsx  index.css  main-svelte.ts  main.ts  main.tsx  markdown.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent_manager.rs  commands.rs  daemon_launcher.rs  detect.rs  error.rs  events.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/agent/: conversation.rs  llm_client.rs  mod.rs  openrouter.rs  runner.rs  tools.rs
src-tauri/src/commands/: mod.rs  vcs.rs  workspace.rs
src-tauri/src/vcs/: mod.rs  service.rs
src-tauri/src/workspace/: mod.rs  service.rs
src/__tests__/: App.test.tsx
src/components/: ActivityBar.svelte  ActivityFeed.svelte  ActivityFeed.test.ts  AgentCard.svelte  AgentPickerPopover.svelte  AgentPickerPopover.test.ts  AppShell.svelte  AppShell.tsx  ChatArea.svelte  ChatArea.test.ts  ChatInput.svelte  CommandPalette.svelte  CommandPalette.tsx  CommitHistory.svelte  ConfigPopover.svelte  ConfirmDialog.svelte  ConfirmDialog.test.ts  ContextMenu.svelte  ContextMenu.test.ts  ContextMenu.tsx  CreateWorkspaceDialog.svelte  CreateWorkspaceDialog.test.ts  CreationInput.svelte  DaemonSplash.svelte  DaemonSplash.test.ts  DiffViewer.svelte  Editor.svelte  Editor.tsx  FileTree.svelte  FileTree.tsx  FileTreeNode.svelte  InnerSidebar.svelte  InnerSidebar.test.ts  KeybindingProvider.tsx  MailboxToolRender.svelte  PeersToolRender.svelte  RenameInput.svelte  SearchCommand.svelte  SearchCommand.test.ts  SendToolRender.svelte  (+25 more)
src/lib/: agent-logos.test.ts  agent-logos.ts  chat-utils.test.ts  chat-utils.ts  editable-guard.test.ts  editable-guard.ts  emergent-tool-calls.test.ts  emergent-tool-calls.ts  file-tree-helpers.ts  highlight.test.ts  highlight.ts  keybindings.test.ts  keybindings.ts  persistence.ts  render-markdown.test.ts  render-markdown.ts  sort-tree.test.ts  sort-tree.ts  tauri.ts
src/lib/primitives/: index.ts  (+26 more)
src/stores/: agents.svelte.test.ts  agents.svelte.ts  app-state.svelte.test.ts  app-state.svelte.ts  commands.svelte.ts  commands.test.ts  commands.ts  container-stats.svelte.ts  editor.svelte.ts  editor.test.ts  editor.ts  file-tree.svelte.ts  file-tree.test.ts  file-tree.ts  focus-context.svelte.ts  focus-context.test.ts  focus-context.ts  mock-data.svelte.ts  mock-metrics.svelte.ts  mock-metrics.test.ts  mock-token-metrics.svelte.ts  store-teardown.test.ts  theme.svelte.test.ts  theme.svelte.ts  toast.svelte.ts  toast.test.ts  types.test.ts  types.ts  ui.svelte.ts  ui.test.ts  usage.svelte.test.ts  usage.svelte.ts  vcs.svelte.ts  vcs.test.ts  workspace.svelte.ts  workspace.test.ts  workspace.ts
tests/frontend/: agent-page.spec.ts  app-startup.spec.ts  chat.spec.ts  helpers.ts  phase-7-visual-qa.md  settings.spec.ts  smoke.spec.ts  task-detail-sidebar.spec.ts  task-notifications.spec.ts  tasks.spec.ts  tauri-mock.ts
(+193 files in other folders)
