[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]
default-members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
agent-client-protocol = { version = "=0.11.1", features = ["unstable"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
which = "7"
