[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]
default-members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
agent-client-protocol = { version = "=1.2.0", features = ["unstable_end_turn_token_usage"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
which = "7"
