[package]
name = "emergent-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emergentd"
path = "src/main.rs"

[dependencies]
emergent-protocol = { path = "../emergent-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
uuid = { workspace = true }
agent-client-protocol = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = "3"
