[package]
name = "emergent-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emergentd"
path = "src/main.rs"

[dependencies]
emergent-protocol = { path = "../emergent-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
getrandom = "0.3"
agent-client-protocol = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
which = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
schemars = "1.2.1"

[dev-dependencies]
tempfile = "3"
