[package]
name = "mock-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-client-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
